--- a/index.html
+++ b/index.html
@@ -981,18 +981,18 @@
     </div>
     <div class="forGrid">
 <script type="text/javascript" src="apikey.js">
-  
-const apikey = config.apikey
-        const postalgetkey = config.postalgetkey
-        const snsgetkey = config.snsgetkey
 </script>
   
-      <script src=`https://maps.google.com/maps/api/js?key=${apikey}&language=ja`></script>
+      <script src=`https://maps.google.com/maps/api/js?key=${config.apikey}&language=ja`></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script>
 
 
       
+  
+const apikey = config.apikey
+        const postalgetkey = config.postalgetkey
+        const snsgetkey = config.snsgetkey
 
         let ballSize, barHeight, barWidth, locater, locater2, setNum, loopCount, skipinputs, makeInfoFlg, mistake
         let looopCnt = document.getElementById('loopcount')
