--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script>
 
-
+console.log(config.apikey)
       
   
 const apikey = config.apikey
