--- a/index.html
+++ b/index.html
@@ -980,19 +980,16 @@
 
     </div>
     <div class="forGrid">
-<script type="text/javascript" src="apikey.js">
-</script>
-  
-      <script src=`https://maps.google.com/maps/api/js?key=${config.apikey}&language=ja`></script>
+<script type="text/javascript" src="apikey.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script>
 
-console.log(config.apikey)
-      
-  
 const apikey = config.apikey
         const postalgetkey = config.postalgetkey
         const snsgetkey = config.snsgetkey
+      var googleApiJs = document.createElement('script')
+            googleApiJs.src = `https://maps.google.com/maps/api/js?key=${apikey}&language=ja`
+  
 
         let ballSize, barHeight, barWidth, locater, locater2, setNum, loopCount, skipinputs, makeInfoFlg, mistake
         let looopCnt = document.getElementById('loopcount')
