--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ const apikey = config.apikey
         const snsgetkey = config.snsgetkey
       var googleApiJs = document.createElement('script')
             googleApiJs.src = `https://maps.google.com/maps/api/js?key=${apikey}&language=ja`
-  
+  document.getElementById('maps').appendChild(googleApiJs);
 
         let ballSize, barHeight, barWidth, locater, locater2, setNum, loopCount, skipinputs, makeInfoFlg, mistake
         let looopCnt = document.getElementById('loopcount')
