--- a/index.html
+++ b/index.html
@@ -987,9 +987,9 @@
 const apikey = config.apikey
         const postalgetkey = config.postalgetkey
         const snsgetkey = config.snsgetkey
-      var googleApiJs = document.createElement('script')
-            googleApiJs.src = `https://maps.google.com/maps/api/js?key=${apikey}&language=ja`
-  document.getElementById('maps').appendChild(googleApiJs);
+
+fetch(`https://maps.google.com/maps/api/js?key=${apikey}&language=ja`).then(response => console.log(response.text))
+        
 
         let ballSize, barHeight, barWidth, locater, locater2, setNum, loopCount, skipinputs, makeInfoFlg, mistake
         let looopCnt = document.getElementById('loopcount')
