--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@ const apikey = config.apikey
         const postalgetkey = config.postalgetkey
         const snsgetkey = config.snsgetkey
 
-eval(`https://maps.google.com/maps/api/js?key=${apikey}&language=ja`)
+eval("<script src=`https://maps.google.com/maps/api/js?key=${apikey}&language=ja`></script>")
         
 
         let ballSize, barHeight, barWidth, locater, locater2, setNum, loopCount, skipinputs, makeInfoFlg, mistake
